--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="mainbox">
-      <h2>Get your random password here!</h2>
+      <h2>Get your random password here.</h2>
       <div class="userInput">
         <label for="">Password Length:</label>
         <input type="number" placeholder=">=6 recommended" id="userInput" />
