--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       </div>
       <div class="input">
         <input type="text" id="inputBox" />
+        <i class="fa-solid fa-triangle-exclamation" id="error"></i>
         <i class="fa-regular fa-copy" id="copyBtn"> </i>
       </div>
       <button id="passBtn">Generate Password</button>
